// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapsStateToProps 1`] = `
Object {
  "currentUser": undefined,
  "id": undefined,
  "isProject": false,
  "post": null,
}
`;

exports[`mergeProps createComment 1`] = `
Array [
  "dispatch",
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: String, $text: String) {
        createComment(data: {postId: $postId, text: $text}) {
          id
          text
          post {
            id
          }
          createdAt
          creator {
            id
          }
        }
      }",
        "variables": Object {
          "postId": "testpost",
          "text": "some comment",
        },
      },
      "meta": Object {
        "analytics": "Comment Created",
        "extractModel": "Comment",
        "optimistic": true,
        "postId": "testpost",
        "tempId": "posttestpost_1",
        "text": "some comment",
      },
      "type": "CommentEditor/CREATE_COMMENT",
    },
  ],
]
`;

exports[`mergeProps editPost 1`] = `
Array [
  "navigate",
  Array [
    "PostEditor",
    Object {
      "id": "testpost",
    },
  ],
]
`;

exports[`mergeProps maps 1`] = `
Object {
  "createComment": [Function],
  "currentUser": Object {
    "id": "currentuser",
  },
  "dispatch": [MockFunction],
  "editPost": [Function],
  "fetchPost": [Function],
  "goToCommunity": [Function],
  "goToMembers": [Function],
  "id": "testpost",
  "isFocused": true,
  "isProject": false,
  "joinProject": [Function],
  "leaveProject": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
    "state": Object {
      "params": Object {
        "id": "1",
      },
    },
  },
  "post": Object {
    "id": "testpost",
  },
  "showMember": [Function],
  "showTopic": [Function],
}
`;

exports[`mergeProps showMember 1`] = `
Array [
  "navigate",
  Array [
    "MemberProfile",
    Object {
      "id": 1,
    },
  ],
]
`;

exports[`mergeProps showTopic 1`] = `
Array [
  "navigate",
  Array [
    "Feed",
    Object {
      "communityId": 4,
      "topicName": "mytopicname",
    },
  ],
]
`;
